starting to output moodle repository api info